<resources>
    <string name="app_name">OsiLifeConnect_ASE</string>
    <string name="login">Login</string>
    <string name="login_to_continue">Login to continue.</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="editText">Test</string>
    <string name="day_button">Day</string>
    <string name="week_button">Week</string>
    <string name="month_button">Month</string>
    <string name="contact_us">Contact Us</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="weight">Weight</string>
    <string name="date_display">MM/DD/YY @ HH:MM</string>
    <string name="weight_display">XXXXlbs</string>
    <string name="weights">Weights</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="osi_location">San Antonio, Texas Sandau-Ste. 210 San Antonio, Texas 78216</string>
    <string name="osi_website">https://osilife.com</string>
    <string name="osi_phone">210-885-8055</string>
    <string name="osi_email">osilife.info@osilife.com</string>
    <string name="units">Units</string>
    <string name="configuration">Configuration</string>
    <string name="username">Username</string>
    <string name="profileImage">profile</string>
    <string name="dLine">--------------------------------------------------------------------------------</string>
    <string name="version_0_4_1">Version 0.4.1</string>
    <string name="welcome">Welcome!</string>
    <string name="incorrect_username_password">Incorrect Username/Password</string>
    <string name="email">Email:</string>
    <string name="no_email_set">No Email Set</string>
    <string name="physician">Physician:</string>
    <string name="remember_me">Remember Me!</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="unknown_service">unknown service</string>
    <string name="unknown_characteristic">unknown characteristic</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="no_data">no data</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
